# app

./: .clippy.toml  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  ISSUES_STATUS_REPORT.md  LICENSE  README.md  REPORTE_ESTADO_ISSUES.md  analysis_options.yaml  firebase.json  flutter_rust_bridge.yaml  l10n.yaml  pubspec.yaml  zapstore.yaml
.cargo/: config.toml
.githooks/: pre-commit
.specify/: ARCHITECTURE.md  CURRENT_FEATURES.md  DESIGN_SYSTEM.md  NOSTR_EXCHANGE_RATES.md  PROTOCOL.md  README.md
docs/: firebase-setup.md  golden-tests.md
ios/: Podfile
lib/: app.dart  firebase_options.dart  main.dart  router.dart
linux/: CMakeLists.txt
rust/: Cargo.toml  build.rs
rust/src/: config.rs  frb_generated.rs  lib.rs  rt.rs
rust/src/api/: bond.rs  disputes.rs  identity.rs  logging.rs  messages.rs  mod.rs  nostr.rs  nwc.rs  orders.rs  reputation.rs  runtime.rs  settings.rs  simple.rs  types.rs
rust/src/crypto/: ecdh.rs  file_enc.rs  file_encrypt.rs  keys.rs  mod.rs  nym.rs  secure_store.rs
rust/src/db/: app_db.rs  indexeddb.rs  mod.rs  schema.rs  seeds.rs  sqlite.rs
rust/src/mostro/: actions.rs  fsm.rs  mod.rs  pow.rs  session.rs
rust/src/network/: blossom.rs  message_queue.rs  mod.rs  relay_pool.rs
rust/src/nostr/: blossom.rs  gift_wrap.rs  mod.rs  order_events.rs  relay_pool.rs
rust/src/nwc/: client.rs  mod.rs
rust/src/protocol/: actions.rs  gift_wrap.rs  mod.rs  state_machine.rs
rust/src/queue/: mod.rs  outbox.rs
rust/src/storage/: indexeddb.rs  mod.rs  sqlite.rs
rust/src/storage/migrations/: 001_initial.sql
rust_builder/: pubspec.yaml  (+1 more)
(+273 files in other folders)
