[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"

# Nostr & Mostro protocol
nostr-sdk = { version = "0.44", default-features = false, features = ["nip44", "nip59"] }
mostro-core = "0.8.0"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
hex = "0.4"

# File attachment encryption (ChaCha20-Poly1305)
chacha20poly1305 = "0.10"

# Hashing (nym derivation)
sha2 = "0.10"

# BIP-32/39 key derivation (m/44'/1237'/38383'/0/N — DO NOT CHANGE)
bip32 = "0.5"
bip39 = { version = "2", features = ["all-languages", "rand"] }

# Native-only: SQLite + tokio do NOT compile to WASM
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros", "migrate"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# WASM-only: IndexedDB + wasm async executor
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
indexed_db_futures = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
